functionality finished gampfire
Signed-off-by: Quan Sun <qsun@pardiff.com>

--- a/gampfire/test/fixtures/rooms.yml
+++ b/gampfire/test/fixtures/rooms.yml
@@ -11,3 +11,16 @@ two:
   root_auth_code: MyString
   last_message_id: 1
   private: false
+# == Schema Information
+#
+# Table name: rooms
+#
+#  id              :integer         not null, primary key
+#  topic           :string(255)
+#  root_auth_code  :string(255)
+#  last_message_id :integer
+#  private         :boolean
+#  created_at      :datetime
+#  updated_at      :datetime
+#
+
